# PatternRecognitionReport2

./: .gitignore  pyproject.toml
src/: myrand_gmm.py  p118a.py  report01.py  report02.py  report03.py  report04.py  report05_m2.py  report05_m3.py  report05_m5.py  run_all.sh  settings.py  test_gmm.py
